# mini-hackathon-netflix-and-chill

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/EpicQuotes/: apps.py  forms.py  models.py  openai.py  views.py
app/EpicQuotes/migrations/: 0001_initial.py
app/EpicQuotes/templates/EpicQuotes/Dashboard/: index.html
app/EpicQuotes/templates/EpicQuotes/MovieDetail/: index.html
app/EpicQuotes/templates/prompts/: system__epic_quote_background_prompt.txt  system__epic_quote_prompt.txt  system__identity_prompt.txt  user__epic_quote_background_prompt.txt  user__epic_quote_prompt.txt
app/configs/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/basic/: main.html
nginx/: nginx.conf
